--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,10 @@
 
 <nav class="navbar navbar-dark bg-dark">
   <a class="navbar-brand" routerLink="/">
-    Saad
+    SaadChain
   </a>
 </nav>
+
 
 <router-outlet>
 </router-outlet>
